*******************************************************************************
What's new (trunk):

10/30 CLEANUP: Merge differences from rel-3-0 mannually!

10/26 CLEANUP: svn merge -r 13673:13828 ^/branches/rel-3-0

10/24-2017 CLEANUP: Remove some 'inline' definitions:
	* GetIMEPos/SetIMEPos. 
	* WndRect -> gui_WndRect. 
	* WndClientRect -> gui_WndClientRect. 

12/06. CLEANUP #11: Merge differences from rel-3-0, and remove unnecessary
files. svn merge -r 12913:13673 ../branches/rel-3-0 (wanzheng)
	* ... ...

*******************************************************************************
What's new in rel-3-0 branch (3.0.12 OR, 2010/12/03 ~ )

07/29. ENHANCEMENT #11: Use Expand16CBitmapEx to contain the alpha component 
for XorBits of cursor and reserve the alpha component of screen when showing
cursor.
	* src/kernel/cursor.c
	* src/kernel/cursor-sa.c
	* src/kernel/cursor-procs.c

07/29. ENHANCEMENT #10: Implement Expand16CBitmapEx, Expand256CBitmapEx, and 
ExpandPart16CBitmap APIs, and define inline stubs for the old APIs.
	* include/gdi.h
	* src/newgdi/bitmap.c

07/21. BUGFIXING #?: Fix the question of dead lock by screensaver_hide. Now send 
message to active window and let active window to hide screensaver. (xwyan)
	* src/include/internals.h
	* src/gui/window.c
	* src/misc/license.c

07/06. BUGFIXING #?: Add macro control for we_heap.(xwyan)
	* src/gui/lf_manager.c

06/14. BUGFIXING #5640: fix bug of double click of event(houhh)
	* src/kernel/event.c

05/25. BUGFIXING #5606: fix bug of selectAll of mTextEdit (wanzheng)
	* src/textedit/mtextedit.c

05/20. BUGFIXING #5560: fixed bug of calc window client rect error in
calc_we_area().(houhh)
	* src/mybmp/winbmp.c

05/03. BUGFIXING #?: fixed bitmap BI_BITFIELDS format load problem.(humingming)
	* src/mybmp/winbmp.c

04/29. BUGFIXING #5534: fixed DrawText can't deal with the first char is '\n'.(humingming)
	* src/newgdi/drawtext.c

04/02. BUGFIXING #5527: Change MSG_KEYSYM/MSG_KEYLONGPRESS/MSG_KEYALWAYSPRESS